# colamone_js

./: .env  .eslintrc.js  .firebaserc  .gitignore  .npmrc  .pr-body-types-node-v25-rerun.md  .pr_body_vitest4.md  CLAUDE.md  LICENSE  README.md  Untitled-1  ai.js  boardgame.css  boardgame.html  boardgame.js  colamone-en.html  colamone-ja.html  colamone-kr.html  colamone-mogera.html  colamone-zh-hans.html  colamone-zh-hant.html  colamone.html  colamone.test.js  colamone.test.ts  colamone_vs.html  critical.css  firebase.json  index.html  jest.config.js  jq_option.js  lefthook.yml  main.js  main.js.map  manifest.json  package-lock.json  package.json  serviceworker.js  sw.js  tsconfig.json  update-date.js  (+3 more)
.github/: dependabot.yml
assets/: boardgame.css
doc/: colamone-en.html  colamone-ja.html  colamone-kr.html  colamone-mogera.html  colamone-zh-hans.html  colamone-zh-hant.html  index.html  sw.js
docs/: boardgame.css  colamone-de.html  colamone-en.html  colamone-hi.html  colamone-ja.html  colamone-kr.html  colamone-mogera.html  colamone-pt.html  colamone-zh-hans.html  colamone-zh-hant.html  colamone.html  index.html  main.js  main.js.map  manifest.json  sw.js  sw.js.LICENSE.txt  sw.js.map
lang/: de.json  en.json  hi.json  ja.json  kr.json  pt.json  zh-hans.json  zh-hant.json
public/: manifest.json
src/: App.css  App.tsx  ai.js  (+18 more)
wasm/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
wasm/pkg/: LICENSE  colamone.d.ts  colamone.js  colamone_bg.wasm  colamone_bg.wasm.d.ts  package.json
wasm/src/: ai.rs  eval.rs  lib.rs  rule.rs
wasm/tests/: ai.rs  rule.rs
(+120 files in other folders)
