[package]
name = "colamone"
version = "0.1.0"
edition = "2021"
description = "colamone by wasm"
repository = "https://github.com/kurehajime/colamone_js"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
